--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^1.0",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.15.0",
+        "pusher-js": "^8.0.2"
     }
 }
